--- a/build-android/app/src/main/res/values/strings.xml
+++ b/build-android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Scene Graph</string>
+    <string name="app_name">Dire Deal</string>
 </resources>
